<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.imc.MainActivity">

    <TextView
        android:id="@+id/poidsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ff0000"
        android:text="@string/poidsTxt"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/poidsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/poidsTxt"
        android:layout_alignParentStart="true"
        android:layout_below="@id/poidsTextView"
        />
    <TextView
        android:id="@+id/tailleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#ff0000"
        android:text="@string/tailleTxt"
        android:textStyle="bold"
        android:layout_below="@id/poidsEditText"
        android:layout_marginTop="@dimen/margin_tailleTextView_poidsEditText"
        />
    <EditText
        android:id="@+id/tailleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/tailleTxt"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tailleTextView"
        />
    <RadioGroup
        android:id="@+id/uniteRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tailleEditText"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/metreRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metreTxt"/>
        <RadioButton
            android:id="@+id/centimetreRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimetreTxt"
            android:checked="true"/>

    </RadioGroup>
    <CheckBox
        android:id="@+id/megaFonctionCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/megaFonctionTxt"
        android:layout_below="@id/uniteRadioGroup"
        android:layout_marginTop="@dimen/margin_megaFonctionCheckBox_uniteRadioGroup"
        />
    <Button
        android:id="@+id/calculerIMCButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculerImcTxt"
        android:layout_below="@id/megaFonctionCheckBox"
        android:layout_marginTop="50dp"/>
    <Button
        android:id="@+id/razButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/razTxt"
        android:layout_below="@id/megaFonctionCheckBox"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/calculerIMCButton"
        android:layout_marginStart="@dimen/margin_razButton_calculerIMCButton"/>
    <TextView
        android:id="@+id/resultatTextView"
        android:text="@string/resultatTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/razButton"
        android:layout_marginTop="@dimen/margin_resultatTextView_razButton"/>
    <TextView
        android:id="@+id/hintTextView"
        android:text="@string/hintTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultatTextView" />
</RelativeLayout>
